Password Safe 3.02 Release Note - June 2006
===========================================

This note describe the new features, fixed bugs and known problems
with Password Safe version 3.02. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

New Features for 3.02
=====================

Bugs fixed in 3.02
==================
[1503075] No longer crashes when number of last databases is set to
zero.
[1507847] Merge databases now merges all the record's fields.

New Features for 3.01
=====================
[726518] User can configure an expiration date for entries and be
notified accordingly.
[726508] Modification and access times now recorded.
[737878] Copy Notes to Clipboard
[1162051] Toolbar additions (Autotype, Browse URL, Copy Notes to clipboard)
[1465395] View Passwords in Nested Tree Mode
[] Ability to clear "Recent Database List"
[] Browse to URL now starts a new instance of the user's default browser
rather than taking over an existing instance

Bugs fixed in 3.01
==================
[1482002] Generated password no longer trashed if > 127 bytes
[1495670] Find now searches new URL and Autotype fields
[1495556] Restore after minimize now works when system-tray not used.
[1472332] Read-only command line argument bug
[] Help file now reflects 3.0 new features.
[1490985, 1423020, 1398936] Microsoft redistributable dlls now
included in installation and zip file. Should fix all "MS*.dll not
installed" problems
[1440951] Can now close application after minimize w/o system tray.



New Features for 3.0Beta2:
==========================
None.

Bugs fixed in 3.0Beta2:
=======================
[1450484] Trialing garbage in tooltip text fixed (DK).
[1462527] Uses a decent PRNG for non-XP platforms, closing key recovery
attack vulnerability.